# tq

./: .env.example  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  cliff.toml  install.sh  package.json  pnpm-lock.yaml
.claude/: settings.json
.github/workflows/: auto-release.yml  ci.yml  red-issues-needs-triage.yml  release.yml
.red/: .gitignore  config.yaml
.red/agents/: domain.md  issue-tracker.md  triage-labels.md
.red/researches/: token-benchmark-toonl-vs-jsonl.md
benchmarks/: README.md
benchmarks/accuracy/: run.mjs
benchmarks/datasets/: MANIFEST.md
benchmarks/datasets/deep-tree/: wikidata-knowledge-tree-large.json  wikidata-knowledge-tree.json
benchmarks/datasets/flat-tabular/: public-repositories-large.json  public-repositories.json
benchmarks/datasets/nested-heterogeneous/: json-schema-event.json
benchmarks/datasets/nested-uniform/: openapi-petstore-paths-large.json  openapi-petstore-paths.json
benchmarks/datasets/streaming-append/: append-only-logs-large.json  append-only-logs-small.json
benchmarks/datasets/tagged-records/: activity-events-small.json
benchmarks/datasets/wide-sparse/: sparse-feature-vectors.json
benchmarks/performance/: run.mjs
benchmarks/performance/datasets/html-heavy/: rendered-pages-large.json  rendered-pages-small.json
benchmarks/results/: 2026-07-15-retrieval-accuracy.md  2026-07-15-token-efficiency.md  runtime-performance-rust.md
benchmarks/tokens/: run.mjs
crates/toon/: Cargo.toml  README.md
crates/toon/benches/: codec.rs
crates/toon/src/: lib.rs
crates/toon/src/lib_parts/: encoder.rs  header_and_scalar.rs  parser.rs  tests.rs
crates/toon/tests/: spec_conformance.rs
crates/toon/tests/fixtures/toon-spec/: PROVENANCE.md  expected-failures.txt
crates/tq/: Cargo.toml  README.md
crates/tq/src/: main.rs
crates/tq/src/main_parts/: cli.rs  query_engine.rs  toonl_trim.rs  upgrade.rs
crates/tq/tests/: golden.rs
crates/tq/tests/golden/aggregation-ordering-strings/: args.txt
crates/tq/tests/golden/array-length-mismatch/: stderr.txt  stdin.toon
crates/tq/tests/golden/array-list-index/: args.txt
crates/tq/tests/golden/array-list-iteration/: args.txt  stdout.toon
crates/tq/tests/golden/array-list-slice/: args.txt  stdin.toon
crates/tq/tests/golden/array-tabular-iteration/: stdin.toon
crates/tq/tests/golden/array-tabular-slice/: stdout.toon
crates/tq/tests/golden/field-file/: args.txt
crates/tq/tests/golden/identity-stdin/: stdout.toon
crates/tq/tests/golden/invalid-nesting/: stdin.toon
crates/tq/tests/golden/invalid-quoted-string/: stderr.txt  stdin.toon
crates/tq/tests/golden/json-output-compact/: args.txt
crates/tq/tests/golden/malformed-stdin/: stderr.txt  stdin.toon  stdout.toon
crates/tq/tests/golden/missing-dotted-path/: args.txt  stdin.toon
crates/tq/tests/golden/nested-dotted-query/: args.txt
crates/tq/tests/golden/raw-string-output/: stdin.toon
crates/tq/tests/golden/toon-output-json-pretty/: stdout.toon
docs/: toon-extensions.md  toon-official-spec.md  toon-reddb-spec.md  toon-spec-reddb-flavored.md  toon-spec.md  toon-wire-efficiency-s3-proposed.md  toonl-reddb-spec.md  toonl-v0.1.md  toonl-v0.2.md  toonl.md  upstream-feedback.md
docs/proposals/: README.md  child-tables-and-matrix.md  cyclic-discriminated-arrays.md  delimiter-choice.md  discriminated-heterogeneous-arrays.md  keyed-map-collapse.md  nested-tabular-headers.md  primitive-array-columns.md
scripts/: check-file-length.sh  check-versions.sh  cyclic_discriminated_arrays_prototype.mjs  generate_wire_efficiency_corpora.mjs  plan-auto-release.sh  sync-version.sh  verify-published.sh  wire_efficiency_token_report.mjs  workspace-members.sh
tests/: README.md
tests/corpus/: truncation.json
tests/corpus/toon/decode/: keyed-map-collapse.json  primitive-array-columns.json
tests/corpus/toon/encode/: active-delimiter.json  keyed-map-collapse.json
tests/corpus/wire-efficiency/: cyclic-discriminated-arrays.json  object-array-columns.json  primitive-array-columns.json
tests/golden/tq/array-list-iteration/: stdin.toon
tests/golden/tq/array-tabular-index/: stdin.toon
tests/golden/tq/array-tabular-iteration/: args.txt  stdout.toon
tests/golden/tq/array-tabular-slice/: args.txt
tests/golden/tq/check-complete/: stdout.toon
tests/golden/tq/check-truncated/: stdin.toon  (+1 more)
tests/json-limits/: corpus.json
tests/toon/: api.rs  expected-failures.txt  json_limits.rs  spec_conformance.rs  wire_efficiency.rs
tests/toonl/fixtures/: v0_1.json  v0_2.json
tests/tq/: behavior.rs  golden.rs
tests/wire-efficiency/: corpora.json
(+66 files in other folders)
