[package]
name = "reddb-io-toon"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "reddb_io_toon"
path = "src/lib.rs"

[[test]]
name = "spec_conformance"
path = "../../tests/toon/spec_conformance.rs"

[[test]]
name = "api"
path = "../../tests/toon/api.rs"

[dependencies]
serde_json = { version = "1", features = ["preserve_order"] }
