[package]
name = "reddb-io-toon"
version.workspace = true
description = "TOON (Token-Oriented Object Notation) parser, serializer, and lazy zero-copy document model"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "reddb_io_toon"
path = "src/lib.rs"

[[test]]
name = "spec_conformance"
path = "../../tests/runners/rust/toon/spec_conformance.rs"

[[test]]
name = "json_limits"
path = "../../tests/runners/rust/toon/json_limits.rs"

[[test]]
name = "wire_efficiency"
path = "../../tests/runners/rust/toon/wire_efficiency.rs"

[[test]]
name = "api"
path = "../../tests/runners/rust/toon/api.rs"

[dependencies]
serde_json = { version = "1", features = ["preserve_order"] }
