[package]
name = "reddb-io-tq"
version.workspace = true
description = "jq-style query CLI and JSON <-> TOON converter for the TOON format (ships the `tq` binary)"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "tq"
path = "src/main.rs"

[[test]]
name = "golden"
path = "../../tests/tq/golden.rs"

[[test]]
name = "behavior"
path = "../../tests/tq/behavior.rs"

[dependencies]
reddb-io-toon = { path = "../toon", version = "0.1.0" }
regex = "1"
serde_json = { version = "1", features = ["preserve_order"] }
